added product brand supercat validator