@@ -37,7 +37,7 @@ public class HealthCheckHandler implements Handler<RoutingContext>, RouteProvide
     @Override
     public List<RouteDefinition> get() {
         return List.of(
-                new RouteDefinition(HttpMethod.GET, "/v1/health-check", Set.of(), Collections.emptyList(),
+                new RouteDefinition(HttpMethod.GET, "/v1/health-check", Set.of(), Collections.emptySet(),
                         this, Optional.empty()
                 )
         );
